--- a/css/registro.css
+++ b/css/registro.css
@@ -80,7 +80,7 @@
   position: relative;
 }
 .input-box span{
-  display: block;
+  display: none;
   background-color: rgba(51,51,51,0.8);
   padding: 5px;
   position: absolute;
@@ -88,6 +88,7 @@
   top: 8px;
   width: 200px;
   color: white;
+  z-index: 1;
 }
 
 .input-box span:after {
